--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,6 +1,7 @@
-# Эти ссылки будут отображаться в разделе финансирования вашего проекта
+✨ Поддержать разработчика ✨
 
-github: Xanixsl
-custom: 
-  - 'https://www.donationalerts.com/r/saylont'
-  - 'https://boosty.to/saylontoff/donate'
+custom:
+  - '💙 https://www.donationalerts.com/r/saylont'
+  - '🎯 https://boosty.to/saylontoff/donate'
+
+🌟 Спасибо за вашу поддержку! 🌟
