--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,7 +1,1 @@
-✨ Поддержать разработчика ✨
-
-custom:
-  - '💙 https://www.donationalerts.com/r/saylont'
-  - '🎯 https://boosty.to/saylontoff/donate'
-
-🌟 Спасибо за вашу поддержку! 🌟
+custom: ["https://www.donationalerts.com/r/saylont", "https://boosty.to/saylontoff/donate"]
